--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <script src="https://vk.com/js/api/openapi.js?168" type="text/javascript"></script>
+    <script src="openapi.js" type="text/javascript"></script>
     <script type="text/javascript">
       VK.Widgets.CommunityMessages("vk_community_messages", 22643807);
     </script>
